--- a/templates/static/scripts/package.json
+++ b/templates/static/scripts/package.json
@@ -13,7 +13,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/pixi.js": "^5.0.0",
     "notie": "^4.3.1",
+    "pixi.js": "^7.2.4",
     "sweetalert2": "^11.7.20",
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
